--- a/style.css
+++ b/style.css
@@ -119,3 +119,120 @@ a:hover {
   font-weight: bolder;
   padding-bottom: 2%;
 }
+
+/* TEST CODE */
+
+/* .prevent-select {
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+body {
+  position: relative;
+  height: 100vh;
+  font-family: "Poppins", sans-serif;
+  width: 100vw;
+  overflow-x: hidden;
+  background-color: #222222;
+}
+
+
+.heading-hr {
+  margin-top: 20%;
+  border: none;
+  height: 4px;
+  background-color: #f1c40f;
+  width: 15%;
+  margin: 0 auto;
+}
+
+.page-heading {
+  text-align: center;
+  margin-top: 5%;
+}
+
+.heading-span {
+  color: #f1c40f;
+}
+
+.form-btn {
+  background-color: #222222;
+  color: #ffffff;
+  border: 1px solid white;
+}
+.form-btn:hover {
+  color: #f1c40f;
+  border: 1px solid #f1c40f;
+}
+
+.centered-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10%;
+}
+
+.rounded-button {
+  border-radius: 10px; 
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #222222; 
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.heading {
+  padding-top: 1%;
+  font-size: 50px;
+}
+
+a {
+  text-decoration: none;
+  color: #f1c40f;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #f1c40f;
+}
+
+.contact-info {
+  margin-top: 5%;
+  padding-bottom: 5%;
+  text-align: center;
+}
+
+.card {
+  background-color: #222222;
+  color: #ffffff;
+  margin-top: 5%;
+  padding: 20px;
+  margin: 10px;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.card:hover {
+  box-shadow: 0 4px 4px #f1c40f;
+}
+
+@media (max-width: 768px) {
+  .card {
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.copyright p {
+  text-align: center;
+  color: lightgray;
+  font-weight: bolder;
+  padding-bottom: 2%;
+} */
